--- a/styles/home.css
+++ b/styles/home.css
@@ -5,17 +5,31 @@ body {
 }
 
 #heading {
-  padding: 100px;
-  font-size: 50px;
+  padding: 75px;
+  font-size: 75px;
   font-weight: 150;
   color: black;
 }
 
+.gradient-text {
+  background-color: #f3ec78;
+  background-image: linear-gradient(45deg, #f3ec78, wheat, #af4261);
+  background-size: 100%;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+}
+
+#navigation_panel tr td {
+  padding: 20px;
+  align-content: center;
+}
+
 #navigation_panel tr td a {
   text-decoration: none;
-  padding: 20px;
   color: black;
-  align-content: center;
 }
 
 #navigation_panel tr td a:hover {
@@ -26,4 +40,3 @@ body {
   color: white;
   font-size: 20px;
 }
-
